--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
         }
     </style>
 <body>
+    <section class="services" id="tours">
     <div class="container">
         <div class="header">
             <h1>Featured Accommodations</h1>
@@ -415,23 +416,23 @@
             <!-- Beach Hotel -->
             <div class="card">
                 <div class="card-header beach">
-                    <img src="images/BNB4.jpeg" width="100%" height="250px" alt="Nyali Hotel"> <br><br>
+                    <img src="images/BNB5.jpeg" width="100%" height="300px" alt="Studio in Waiyaki Way"> <br><br>
                     
                 </div>
                 <div class="card-body">
                     <div class="card-description">
-                    <div class="card-title">Nyali Hotel</div>
-                    <div class="card-location">📍 Mombasa</div>    
-                        3BDR suite, Swimming pool, Ample parking, WIFI, 500m to shopping centre and mall
+                    <div class="card-title">Studio in Waiyaki Way</div>
+                    <div class="card-location">📍 Nairobi</div>    
+                        Studio Appartment, Swimming pool, Ample parking, WIFI, 500m to shopping centre and mall
                     </div>
                     <div class="amenities">
-                        <span class="amenity-tag">Ocean View</span>
-                        <span class="amenity-tag">Private Beach</span>
+                        <span class="amenity-tag">Town  View</span>
+                        <span class="amenity-tag">Private Swimming Pool</span>
                         <span class="amenity-tag">Fine Dining</span>
                         <span class="amenity-tag">Romantic</span>
                     </div>
                     <div class="card-actions">
-                        <a href="https://wa.me/254700000000?text=Hi,%20I'm%20interested%20in%20Nyali%20Hotel%20(Sh.12,000/night)" class="btn btn-primary">Enquire</a>
+                        <a href="https://wa.me/254708221114?text=Hi,%20I'm%20interested%20in%20Nyali%20Hotel%20" class="btn btn-primary">Enquire</a>
                         <button class="btn btn-secondary">Details</button>
                     </div>
                 </div>
@@ -455,7 +456,7 @@
                         <span class="amenity-tag">Lodge Pool</span>
                     </div>
                     <div class="card-actions">
-                        <a href="https://wa.me/254700000000?text=Hi,%20I'm%20interested%20in%20Moi%20South%20Lake%20(Sh.8,000/night)" class="btn btn-primary">Enquire</a>
+                        <a href="https://wa.me/254708221114?text=Hi,%20I'm%20interested%20in%20Moi%20South%20Lake%20" class="btn btn-primary">Enquire</a>
                         <button class="btn btn-secondary">Details</button>
                     </div>
                 </div>
@@ -481,7 +482,7 @@
                         <span class="amenity-tag">Luxury Spa</span>
                     </div>
                     <div class="card-actions">
-                        <a href="https://wa.me/254700000000?text=Hi,%20I'm%20interested%20in%20Cabin%20in%20Nakuru%20City%20(Sh.12,000-16,000/night)" class="btn btn-primary">Enquire</a>
+                        <a href="https://wa.me/254708221114?text=Hi,%20I'm%20interested%20in%20Cabin%20in%20Nakuru%20City%20" class="btn btn-primary">Enquire</a>
                         <button class="btn btn-secondary">Details</button>
                     </div>
                 </div>
@@ -506,7 +507,7 @@
                         <span class="amenity-tag">Swimming Pool</span>
                     </div>
                     <div class="card-actions">
-                        <a href="https://wa.me/254700000000?text=Hi,%20I'm%20interested%20in%20Capital%20Rise%20(Sh.10,000/night)" class="btn btn-primary">Enquire</a>
+                        <a href="https://wa.me/254708221114?text=Hi,%20I'm%20interested%20in%20Capital%20Rise%20" class="btn btn-primary">Enquire</a>
                         <button class="btn btn-secondary">Details</button>
                     </div>
                 </div>
@@ -531,7 +532,7 @@
                         <span class="amenity-tag">Kids Club</span>
                     </div>
                     <div class="card-actions">
-                        <a href="https://wa.me/254700000000?text=Hi,%20I'm%20interested%20in%20HIMALAYA%20HEIGHT%20(Sh.12,000/night)" class="btn btn-primary">Enquire</a>
+                        <a href="https://wa.me/254708221114?text=Hi,%20I'm%20interested%20in%20HIMALAYA%20HEIGHT%20" class="btn btn-primary">Enquire</a>
                         <button class="btn btn-secondary">Details</button>
                     </div>
                 </div>
@@ -556,7 +557,7 @@
                         <span class="amenity-tag">GYM</span>
                     </div>
                     <div class="card-actions">
-                        <a href="https://wa.me/254700000000?text=Hi,%20I'm%20interested%20in%20PADMORE%20RESIDENCES%20(Sh.4,500/night)" class="btn btn-primary">Enquire</a>
+                        <a href="https://wa.me/254708221114?text=Hi,%20I'm%20interested%20in%20PADMORE%20RESIDENCES%20" class="btn btn-primary">Enquire</a>
                         <button class="btn btn-secondary">Details</button>
                     </div>
                 </div>
