--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                         <span class="amenity-tag">Romantic</span>
                     </div>
                     <div class="card-actions">
-                        <a href="https://wa.me/254708221114?text=Hi,%20I'm%20interested%20in%20Nyali%20Hotel%20" class="btn btn-primary">Enquire</a>
+                        <a href="https://wa.me/254708221114?text=Hi,%20I'm%20interested%20in%20Studio%20Waiyaki Way%20" class="btn btn-primary">Enquire</a>
                         <button class="btn btn-secondary">Details</button>
                     </div>
                 </div>
