--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#tours">Tours</a></li>
                     <li><a href="#car-hire">Car Hire</a></li>
-                    <li><a href="#stay-with-us">Stay With Us</a></li>
+                    <li><a href="#accommodations">Accommodations</a></li>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -47,7 +47,7 @@
             <a href="#tours" class="cta-button">Explore Tours</a>
         </div>
     </section>
-
+<body>
  <!-- Services Section -->
 <section class="services" id="tours">
     <div class="container">
@@ -202,7 +202,7 @@
         </div>
     </section>
 
-     <!-- Stay With Us Section -->
+     <!-- Accomodation Section -->
 
     <style>
         * {
@@ -398,11 +398,11 @@
             }
         }
     </style>
-<body>
-    <section class="services" id="tours">
+
+    <section class="services" id="accommodations"></section>
     <div class="container">
         <div class="header">
-            <h1>Featured Accommodations</h1>
+            <h1>Accommodations</h1>
         </div>
 
         <div class="filter-tabs">
@@ -726,7 +726,7 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#tours">Tours</a></li>
                         <li><a href="#car-hire">Car Hire</a></li>
-                        <li><a href="#stay-with-us">Stay With Us</a></li>
+                        <li><a href="#accommodations">Accommodations</a></li>
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
