--- a/index.html
+++ b/index.html
@@ -369,22 +369,22 @@
         }
 
         .btn-primary {
-            background-color: #25D366;
+            background-color: #2196F3;
             color: white;
         }
 
         .btn-primary:hover {
-            background-color: #1ea952;
+            background-color: #e67e22; 
         }
 
         .btn-secondary {
             background-color: white;
             color: #007bff;
-            border: 2px solid #007bff;
+            border: 2px solid #e67e22;
         }
 
         .btn-secondary:hover {
-            background-color: #007bff;
+            background-color: #e67e22;
             color: white;
         }
 
